# drf-flex-fields2

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  LICENSE.md  README.md  latest-versions.txt  mkdocs.yml  noxfile.py  pyproject.toml  renovate.json  renovate.json5
.github/: copilot-instructions.md
.github/actions/generate-project-sbom/: action.yml
.github/actions/setup-ci-environment/: action.yml
.github/prompts/: fix-code-review.prompt.md  unittest-review.prompt.md
.github/workflows/: build-docs.yml  refresh-sbom.yml  release-new-version.yml  release.yml  renovate-major.yml  renovate-minor.yml  run-tests-dummy.yml  run-tests-full.yml  run-tests.yml
doc/: CHANGELOG.md  REPOSITORY-SETUP.md  advanced.md  api-reference.md  index.md  installation.md  quickstart.md  serializer-options.md  usage.md
docs/: CHANGELOG.rst  REPOSITORY-SETUP.rst  advanced.rst  api-reference.rst  conf.py  index.rst  installation.rst  quickstart.rst  usage.rst
docs/getting-started/: core-concepts.rst  installation.rst  migration.rst  quickstart.rst
docs/guide/: advanced.rst  serializer-options.rst  usage.rst
docs/maintainers/: architecture.rst  dependency-policy.rst  development-process.rst  local-development.rst  maintainer-architecture.rst  maintainer-development-process.rst  maintainer-local-development.rst  repository-setup.rst  versioning-and-releases.rst
docs/reference/: api-reference.rst  changelog.rst  history.rst
rest_flex_fields2/: filter_backends.py  utils.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/CHANGELOG/: index.html
site/REPOSITORY-SETUP/: index.html
site/advanced/: index.html
site/api-reference/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/serializer-options/: index.html
site/usage/: index.html
src/: manage.py
src/rest_flex_fields2/: __init__.py  config.py  filter_backends.py  serializers.py  utils.py  views.py
src/tests/: test_config.py  test_flex_fields_model_serializer.py  test_serializer.py  test_utils.py  test_views.py
src/tests/testapp/: apps.py  models.py  serializers.py  views.py
tests/: test_flex_fields_model_serializer.py  test_serializer.py
tests/testapp/: serializers.py
