[tool.poetry]
name = "drf-flex-fields2"
version = "2.0.0"
description = "Flexible, dynamic fields and nested resources for Django REST Framework serializers (forked from drf-flex-fields)."
authors = ["Robert Singer", "Dennis Schulmeister-Zimolong"]
maintainers = ["Dennis Schulmeister-Zimolong"]
license = "MIT"
readme = "README.md"
homepage = "https://drf-flex-fields2.readthedocs.io/en/stable/"
repository = "https://github.com/openbook-education/drf-flex-fields2"
keywords = ["django", "rest", "api", "dynamic", "fields"]
packages = [{ include = "rest_flex_fields2", from = "src" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = ">=3.12,<4"
django = ">=6,<=6.0.4"
djangorestframework = ">=3.14.0,<3.17.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.1.0"
sphinx-autoapi = "^3.8.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.5"

[tool.coverage.run]
branch = true
source = ["src/rest_flex_fields2"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
omit = [
    "*/__pycache__/*",
]

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"
